# kugelblitz

./: .gitignore  .golangci.yml  CLAUDE.md  Makefile  README.md  README_zh.md  go.mod  go.sum  go.work  go.work.sum
acp/: acp.go  acp_test.go  converter.go  converter_test.go  handler.go  handler_test.go  session.go  session_test.go  transport.go  types.go
config/: config.go  config_test.go
constants/: enums.go
core/: agent_bridge.go  agent_context.go  agent_context_test.go  agent_input.go  agent_input_test.go  agents.go  errors.go  hooks.go  human_gate.go  lm_provider.go  lm_provider_test.go  logger.go  logger_test.go  media.go  media_test.go  message.go  message_test.go  observer.go  session_context.go  tool.go  tool_test.go  workspace.go  workspace_test.go
docs/: image-understanding-proposal.md
eval/: config.yaml  pyproject.toml
eval/cli/: go.mod  go.sum  main.go
eval/src/kugelblitz_eval/: __init__.py  __main__.py  orchestrator.py
eval/src/kugelblitz_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eval/src/kugelblitz_eval/adapters/: base.py  kugelblitz.py
eval/src/kugelblitz_eval/common/: docker.py  llm.py
eval/src/kugelblitz_eval/datasets/: swebench.py
eval/src/kugelblitz_eval/reporters/: langfuse.py  markdown.py
eval/src/kugelblitz_eval/scorers/: __init__.py  e2e.py  memory.py  plan.py  tools.py
eval/tests/: test_scorers.py
mcp/: config.go  manager.go  manager_test.go
memory/: chroma.go  chroma_test.go  compressor.go  compressor_test.go  long_term.go  long_term_test.go  media_converter.go  media_converter_test.go  (+5 more)
(+161 files in other folders)
